plsql/src/main/java/org/slackerdb/plsql/PlSqlParserParser.java
// Generated from PlSqlParser.g4 by ANTLR 4.13.2
package org.slackerdb.plsql;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PlSqlParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, WS=9, 
		CRLF=10, Null=11, Or=12, And=13, Equals=14, NEquals=15, GTEquals=16, LTEquals=17, 
		Pow=18, Excl=19, GT=20, LT=21, Add=22, Subtract=23, Multiply=24, Divide=25, 
		Modulus=26, OBrace=27, CBrace=28, OBracket=29, CBracket=30, OParen=31, 
		CParen=32, SColon=33, Assign=34, Comma=35, QMark=36, Colon=37, DECLARE=38, 
		BEGIN=39, END=40, CURSOR=41, IS=42, LOOP=43, FETCH=44, OPEN=45, LET=46, 
		CLOSE=47, BREAK=48, EXIT=49, WHEN=50, INTO=51, NOTFOUND=52, IF=53, ELSEIF=54, 
		ENDIF=55, THEN=56, FOR=57, TO=58, ELSE=59, RETURN=60, EXCEPTION=61, PASS=62, 
		IN=63, Bool=64, Number=65, Identifier=66, String=67, Comment=68;
	public static final int
		RULE_plsql_script = 0, RULE_declare_block = 1, RULE_begin_block = 2, RULE_begin_code_block = 3, 
		RULE_begin_exception_block = 4, RULE_sql_block = 5, RULE_if_block = 6, 
		RULE_elseif_block = 7, RULE_else_block = 8, RULE_exception = 9, RULE_loop_block = 10, 
		RULE_for_block = 11, RULE_variable_declaration = 12, RULE_variable_name = 13, 
		RULE_variable_defaultValue = 14, RULE_let = 15, RULE_sql = 16, RULE_fetchsql = 17, 
		RULE_sql_part = 18, RULE_sql_token = 19, RULE_cursor_open_statement = 20, 
		RULE_cursor_close_statement = 21, RULE_fetchstatement = 22, RULE_exit_when_statement = 23, 
		RULE_fetch_list = 24, RULE_if = 25, RULE_elseif = 26, RULE_else = 27, 
		RULE_breakloop = 28, RULE_endif = 29, RULE_datatype = 30, RULE_exit = 31, 
		RULE_functionCall = 32, RULE_exprList = 33, RULE_expression = 34, RULE_bindIdentifier = 35, 
		RULE_list = 36;
	private static String[] makeRuleNames() {
		return new String[] {
			"plsql_script", "declare_block", "begin_block", "begin_code_block", "begin_exception_block", 
			"sql_block", "if_block", "elseif_block", "else_block", "exception", "loop_block", 
			"for_block", "variable_declaration", "variable_name", "variable_defaultValue", 
			"let", "sql", "fetchsql", "sql_part", "sql_token", "cursor_open_statement", 
			"cursor_close_statement", "fetchstatement", "exit_when_statement", "fetch_list", 
			"if", "elseif", "else", "breakloop", "endif", "datatype", "exit", "functionCall", 
			"exprList", "expression", "bindIdentifier", "list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':='", "'INT'", "'TEXT'", "'BIGINT'", "'DOUBLE'", "'DATE'", "'TIMESTAMP'", 
			"'FLOAT'", null, "'\\n'", "'null'", "'||'", "'&&'", "'=='", "'!='", "'>='", 
			"'<='", "'^'", "'!'", "'>'", "'<'", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'{'", "'}'", "'['", "']'", "'('", "')'", "';'", "'='", "','", "'?'", 
			"':'", "'DECLARE'", "'BEGIN'", "'END'", "'CURSOR'", "'IS'", "'LOOP'", 
			"'FETCH'", "'OPEN'", "'LET'", "'CLOSE'", "'BREAK'", "'EXIT'", "'WHEN'", 
			"'INTO'", "'NOTFOUND'", "'IF'", "'ELSEIF'", null, "'THEN'", "'FOR'", 
			"'TO'", "'ELSE'", "'RETURN'", "'EXCEPTION'", "'PASS'", "'in'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "WS", "CRLF", "Null", 
			"Or", "And", "Equals", "NEquals", "GTEquals", "LTEquals", "Pow", "Excl", 
			"GT", "LT", "Add", "Subtract", "Multiply", "Divide", "Modulus", "OBrace", 
			"CBrace", "OBracket", "CBracket", "OParen", "CParen", "SColon", "Assign", 
			"Comma", "QMark", "Colon", "DECLARE", "BEGIN", "END", "CURSOR", "IS", 
			"LOOP", "FETCH", "OPEN", "LET", "CLOSE", "BREAK", "EXIT", "WHEN", "INTO", 
			"NOTFOUND", "IF", "ELSEIF", "ENDIF", "THEN", "FOR", "TO", "ELSE", "RETURN", 
			"EXCEPTION", "PASS", "IN", "Bool", "Number", "Identifier", "String", 
			"Comment"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlSqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlSqlParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Plsql_scriptContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(PlSqlParserParser.EOF, 0); }
		public Declare_blockContext declare_block() {
			return getRuleContext(Declare_blockContext.class,0);
		}
		public Begin_blockContext begin_block() {
			return getRuleContext(Begin_blockContext.class,0);
		}
		public TerminalNode CRLF() { return getToken(PlSqlParserParser.CRLF, 0); }
		public Plsql_scriptContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_plsql_script; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitPlsql_script(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Plsql_scriptContext plsql_script() throws RecognitionException {
		Plsql_scriptContext _localctx = new Plsql_scriptContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_plsql_script);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DECLARE) {
				{
				setState(74);
				declare_block();
				}
			}

			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==BEGIN) {
				{
				setState(77);
				begin_block();
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==CRLF) {
				{
				setState(80);
				match(CRLF);
				}
			}

			setState(83);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declare_blockContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(PlSqlParserParser.DECLARE, 0); }
		public List<Variable_declarationContext> variable_declaration() {
			return getRuleContexts(Variable_declarationContext.class);
		}
		public Variable_declarationContext variable_declaration(int i) {
			return getRuleContext(Variable_declarationContext.class,i);
		}
		public TerminalNode CRLF() { return getToken(PlSqlParserParser.CRLF, 0); }
		public Declare_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declare_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitDeclare_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declare_blockContext declare_block() throws RecognitionException {
		Declare_blockContext _localctx = new Declare_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declare_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(DECLARE);
			setState(89);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CURSOR || _la==Identifier) {
				{
				{
				setState(86);
				variable_declaration();
				}
				}
				setState(91);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(92);
				match(CRLF);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Begin_blockContext extends ParserRuleContext {
		public TerminalNode BEGIN() { return getToken(PlSqlParserParser.BEGIN, 0); }
		public Begin_code_blockContext begin_code_block() {
			return getRuleContext(Begin_code_blockContext.class,0);
		}
		public TerminalNode END() { return getToken(PlSqlParserParser.END, 0); }
		public TerminalNode SColon() { return getToken(PlSqlParserParser.SColon, 0); }
		public List<TerminalNode> CRLF() { return getTokens(PlSqlParserParser.CRLF); }
		public TerminalNode CRLF(int i) {
			return getToken(PlSqlParserParser.CRLF, i);
		}
		public ExceptionContext exception() {
			return getRuleContext(ExceptionContext.class,0);
		}
		public Begin_exception_blockContext begin_exception_block() {
			return getRuleContext(Begin_exception_blockContext.class,0);
		}
		public Begin_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_begin_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitBegin_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Begin_blockContext begin_block() throws RecognitionException {
		Begin_blockContext _localctx = new Begin_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_begin_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(BEGIN);
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(96);
				match(CRLF);
				}
				break;
			}
			setState(99);
			begin_code_block();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==EXCEPTION) {
				{
				setState(100);
				exception();
				setState(101);
				begin_exception_block();
				}
			}

			setState(105);
			match(END);
			setState(106);
			match(SColon);
			setState(108);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(107);
				match(CRLF);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Begin_code_blockContext extends ParserRuleContext {
		public List<If_blockContext> if_block() {
			return getRuleContexts(If_blockContext.class);
		}
		public If_blockContext if_block(int i) {
			return getRuleContext(If_blockContext.class,i);
		}
		public List<For_blockContext> for_block() {
			return getRuleContexts(For_blockContext.class);
		}
		public For_blockContext for_block(int i) {
			return getRuleContext(For_blockContext.class,i);
		}
		public List<Loop_blockContext> loop_block() {
			return getRuleContexts(Loop_blockContext.class);
		}
		public Loop_blockContext loop_block(int i) {
			return getRuleContext(Loop_blockContext.class,i);
		}
		public List<Sql_blockContext> sql_block() {
			return getRuleContexts(Sql_blockContext.class);
		}
		public Sql_blockContext sql_block(int i) {
			return getRuleContext(Sql_blockContext.class,i);
		}
		public Begin_code_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_begin_code_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitBegin_code_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Begin_code_blockContext begin_code_block() throws RecognitionException {
		Begin_code_blockContext _localctx = new Begin_code_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_begin_code_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -2900319259538227202L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 31L) != 0)) {
				{
				setState(114);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
				case 1:
					{
					setState(110);
					if_block();
					}
					break;
				case 2:
					{
					setState(111);
					for_block();
					}
					break;
				case 3:
					{
					setState(112);
					loop_block();
					}
					break;
				case 4:
					{
					setState(113);
					sql_block();
					}
					break;
				}
				}
				setState(118);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Begin_exception_blockContext extends ParserRuleContext {
		public List<If_blockContext> if_block() {
			return getRuleContexts(If_blockContext.class);
		}
		public If_blockContext if_block(int i) {
			return getRuleContext(If_blockContext.class,i);
		}
		public List<For_blockContext> for_block() {
			return getRuleContexts(For_blockContext.class);
		}
		public For_blockContext for_block(int i) {
			return getRuleContext(For_blockContext.class,i);
		}
		public List<Loop_blockContext> loop_block() {
			return getRuleContexts(Loop_blockContext.class);
		}
		public Loop_blockContext loop_block(int i) {
			return getRuleContext(Loop_blockContext.class,i);
		}
		public List<Sql_blockContext> sql_block() {
			return getRuleContexts(Sql_blockContext.class);
		}
		public Sql_blockContext sql_block(int i) {
			return getRuleContext(Sql_blockContext.class,i);
		}
		public Begin_exception_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_begin_exception_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitBegin_exception_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Begin_exception_blockContext begin_exception_block() throws RecognitionException {
		Begin_exception_blockContext _localctx = new Begin_exception_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_begin_exception_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -2900319259538227202L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 31L) != 0)) {
				{
				setState(123);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
				case 1:
					{
					setState(119);
					if_block();
					}
					break;
				case 2:
					{
					setState(120);
					for_block();
					}
					break;
				case 3:
					{
					setState(121);
					loop_block();
					}
					break;
				case 4:
					{
					setState(122);
					sql_block();
					}
					break;
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Sql_blockContext extends ParserRuleContext {
		public LetContext let() {
			return getRuleContext(LetContext.class,0);
		}
		public If_blockContext if_block() {
			return getRuleContext(If_blockContext.class,0);
		}
		public Begin_blockContext begin_block() {
			return getRuleContext(Begin_blockContext.class,0);
		}
		public FetchsqlContext fetchsql() {
			return getRuleContext(FetchsqlContext.class,0);
		}
		public BreakloopContext breakloop() {
			return getRuleContext(BreakloopContext.class,0);
		}
		public FetchstatementContext fetchstatement() {
			return getRuleContext(FetchstatementContext.class,0);
		}
		public Cursor_open_statementContext cursor_open_statement() {
			return getRuleContext(Cursor_open_statementContext.class,0);
		}
		public Cursor_close_statementContext cursor_close_statement() {
			return getRuleContext(Cursor_close_statementContext.class,0);
		}
		public ExitContext exit() {
			return getRuleContext(ExitContext.class,0);
		}
		public SqlContext sql() {
			return getRuleContext(SqlContext.class,0);
		}
		public Sql_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sql_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitSql_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Sql_blockContext sql_block() throws RecognitionException {
		Sql_blockContext _localctx = new Sql_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_sql_block);
		try {
			setState(138);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(128);
				let();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(129);
				if_block();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(130);
				begin_block();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(131);
				fetchsql();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(132);
				breakloop();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(133);
				fetchstatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(134);
				cursor_open_statement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(135);
				cursor_close_statement();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(136);
				exit();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(137);
				sql();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_blockContext extends ParserRuleContext {
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public EndifContext endif() {
			return getRuleContext(EndifContext.class,0);
		}
		public List<Sql_blockContext> sql_block() {
			return getRuleContexts(Sql_blockContext.class);
		}
		public Sql_blockContext sql_block(int i) {
			return getRuleContext(Sql_blockContext.class,i);
		}
		public List<Elseif_blockContext> elseif_block() {
			return getRuleContexts(Elseif_blockContext.class);
		}
		public Elseif_blockContext elseif_block(int i) {
			return getRuleContext(Elseif_blockContext.class,i);
		}
		public Else_blockContext else_block() {
			return getRuleContext(Else_blockContext.class,0);
		}
		public TerminalNode CRLF() { return getToken(PlSqlParserParser.CRLF, 0); }
		public If_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitIf_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final If_blockContext if_block() throws RecognitionException {
		If_blockContext _localctx = new If_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_if_block);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(140);
			if_();
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(141);
					sql_block();
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ELSEIF) {
				{
				{
				setState(147);
				elseif_block();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(153);
				else_block();
				}
			}

			setState(156);
			endif();
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				{
				setState(157);
				match(CRLF);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Elseif_blockContext extends ParserRuleContext {
		public ElseifContext elseif() {
			return getRuleContext(ElseifContext.class,0);
		}
		public List<Sql_blockContext> sql_block() {
			return getRuleContexts(Sql_blockContext.class);
		}
		public Sql_blockContext sql_block(int i) {
			return getRuleContext(Sql_blockContext.class,i);
		}
		public Elseif_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseif_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitElseif_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Elseif_blockContext elseif_block() throws RecognitionException {
		Elseif_blockContext _localctx = new Elseif_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_elseif_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			elseif();
			setState(164);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(161);
					sql_block();
					}
					} 
				}
				setState(166);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,17,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Else_blockContext extends ParserRuleContext {
		public ElseContext else_() {
			return getRuleContext(ElseContext.class,0);
		}
		public List<Sql_blockContext> sql_block() {
			return getRuleContexts(Sql_blockContext.class);
		}
		public Sql_blockContext sql_block(int i) {
			return getRuleContext(Sql_blockContext.class,i);
		}
		public Else_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PlSqlParserVisitor ) return ((PlSqlParserVisitor<? extends T>)visitor).visitElse_block(this);
			else return visitor.visitChildren(this);
		}
	}
